# StdAtm

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  pyproject.toml
.github/workflows/: build_release.yml  tests.yml  watchman_tests.yml
.run/: pytest benchmark in src.run.xml  pytest in src.run.xml
docs/: conf.py  index.rst  requirements.txt
src/stdatm/: __init__.py  airspeeds.py  atmosphere.py  atmosphere_partials.py  base.py  partials_state_parameters.py  speed_parameters.py  state_parameters.py  static_parameters.py
src/stdatm/tests/: __init__.py  test_atmosphere.py  test_atmosphere_partials.py
