[tool.poetry]
name = "stdatm"
version = "0.0.0"
homepage = "https://github.com/fast-aircraft-design/StdAtm"
description = "Numpy-oriented Standard Atmosphere model"
readme = "README.md"
authors = [
    "Christophe DAVID <christophe.david@onera.fr>",
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics"
]

packages = [
    { include = "stdatm", from = "src" },
]
exclude = ["**/tests/**"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
    { version = ">=1.22.0, <1.25", python = "~3.8" },
    { version = ">=1.23.2, <3", python = ">=3.9, <3.12" },
    { version = ">=1.26, <3", python = "^3.12" },
]
scipy = [
    { version = ">=1.9.3, <1.11", python = "~3.8" },
    { version = "^1.10", python = ">=3.9, <3.12" },
    { version = "^1.11.2", python = "^3.12" },
]

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = { version = "^7.0", extras = ["toml"] }

[tool.poetry.group.benchmark.dependencies]
pytest-profiling = "^1.7.0"
snakeviz = "^2.1.1"
pytest-benchmark = { version = "^4", extras = ["histogram"] }

[tool.poetry.group.doc.dependencies]
sphinx = "^4.1.2"
sphinx-rtd-theme = "^1.0"
sphinxcontrib-bibtex = "^2.3.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.14.1"
ruff = "0.4.9"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov-report term-missing --cov-report html --verbose --benchmark-disable --benchmark-autosave  --benchmark-calibration-precision=100 --benchmark-max-time=2.0"
testpaths = ["src"]
norecursedirs = ["dist", "build", ".tox"]

[tool.coverage.run]
branch = true
source = ["stdatm"]
omit = ["*/test/*", "*/tests/*"]
[tool.coverage.paths]
source = ["src/", "*/site-packages/"]
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ = = .__main__.:"
]
